# truthTableGenerator

./: LICENSE  README.md  truthTable.cabal
app/: Main.hs
src/: Evaluator.hs  Parser.hs  Types.hs
static/src/: Main.elm
