cabal-version:      3.0
name:               truthTable
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Alec Rodriguez
maintainer:         alecrodriguez1247@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files: 

common warnings
    ghc-options: -Wall

executable truthTable
    import:           warnings
    main-is:          Main.hs
    other-modules: Types, Parser, Evaluator
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      text >= 2.1.1,
                      megaparsec >= 9.6.1,
                      parser-combinators >= 1.3.0,
                      scotty,
                      aeson
    hs-source-dirs:   app, src
    default-language: Haskell2010
